# Pauli-Propagator

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  main.py  prop.code-workspace  pyproject.toml  pyproject.tomol
.github/workflows/: python-app.yml
docs/source/: conf.py  index.rst  modules.rst  pprop.circuits.rst  pprop.gates.base.rst  pprop.gates.controlled.rst  pprop.gates.controlledrotation.rst  pprop.gates.rotation.rst  pprop.gates.rst  pprop.gates.simpleclifford.rst  pprop.gates.simplenonclifford.rst  pprop.gates.utils.rst  pprop.optimization.rst  pprop.pauli.op.rst  pprop.pauli.rst  pprop.pauli.sentence.rst  pprop.propagator.evolve.rst  pprop.propagator.pruning.rst  pprop.propagator.rst  pprop.propagator.utils.rst  pprop.rst  pprop.utils.rst  requirements.txt
docs/source/_static/: custom.css
docs/source/getting_started/: citation.rst  installation.rst  overview.rst  usage.rst
notebooks/: UAT.ipynb  accuracy.ipynb  barrenplateau.ipynb  bp2.ipynb  coefficient.ipynb  consistency.ipynb  errorbound.ipynb  gaq.ipynb  iqp.ipynb  pruning.ipynb  qcnn.ipynb  result_dict.pkl  sanity_check.ipynb  showcase.ipynb  test_mono.ipynb  theory.ipynb  truncation.ipynb  tutorial.ipynb  vqe.ipynb
src/pprop/: __init__.py  example.py  lambdify.py  observables.py  pennylane_bug.py  propagator.py  test.py  utils.py
src/pprop/circuits/: examples.py
src/pprop/gates/: __init__.py  apply.py  base.py  controlled.py  controlledrotation.py  rotation.py  simpleclifford.py  simplenonclifford.py  tables.py  utils.py
src/pprop/optimization/: __init__.py
src/pprop/pauli/: op.py  sentence.py
src/pprop/plot/: obs.py
src/pprop/propagator/: __init__.py  evolve.py  pruning.py  utils.py
src/pprop/utils/: numba.py  obs.py
tests/: test_brick.py  test_propagation.py  test_pruning.py
