[project]
name = "zprop"
version = "0.2.0"
authors = [
    { name="Saverio Monaco", email="saverio.monaco@desy.de" }
]
description = "Description"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jax==0.4.26",
    "jaxlib==0.4.26",
    "optax==0.2.2",
    "pennylane==0.35.1",
    "sympy>=1.14.0",
    "tqdm>=4.67.1",
]

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/pprop"
]
